WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12943
box-shadow: small values don't affect shadow position
https://bugs.webkit.org/show_bug.cgi?id=12943
Summary
box-shadow: small values don't affect shadow position
Jan Boeijink
Reported
2007-03-02 04:20:35 PST
Not sure if this is a real bug, but when using small values for length attributes (-1px or 0px or 1px), there is no visual difference in the shadow position. I opened a screenshot in Photoshop but the RGB values are identical.
Attachments
shadow position not changed when using small position values
(321 bytes, text/html)
2007-03-02 04:22 PST
,
Jan Boeijink
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Jan Boeijink
Comment 1
2007-03-02 04:22:51 PST
Created
attachment 13450
[details]
shadow position not changed when using small position values
Jan Boeijink
Comment 2
2007-03-02 04:23:55 PST
Added an example in the attachment.
mitz
Comment 3
2007-03-02 04:48:08 PST
I think this is a bug in Core Graphics. I've noticed it while trying to fix box shadow repaint.
Mark Rowe (bdash)
Comment 4
2007-03-07 06:53:31 PST
<
rdar://problem/5045728
>
mitz
Comment 5
2007-07-23 15:09:47 PDT
See also
bug 14736
.
mitz
Comment 6
2007-12-14 11:38:38 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/28714
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug